--- a/offline2-regression/1805052.ipynb
+++ b/offline2-regression/1805052.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1472,
+   "execution_count": 1832,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1473,
+   "execution_count": 1833,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1474,
+   "execution_count": 1834,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1474,
+     "execution_count": 1834,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1475,
+   "execution_count": 1835,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1476,
+   "execution_count": 1836,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1477,
+   "execution_count": 1837,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1478,
+   "execution_count": 1838,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1479,
+   "execution_count": 1839,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "4                 1              2           70.70       151.65      1  "
       ]
      },
-     "execution_count": 1479,
+     "execution_count": 1839,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1480,
+   "execution_count": 1840,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1481,
+   "execution_count": 1841,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1482,
+   "execution_count": 1842,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1483,
+   "execution_count": 1843,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1484,
+   "execution_count": 1844,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1485,
+   "execution_count": 1845,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1486,
+   "execution_count": 1846,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1487,
+   "execution_count": 1847,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "0"
       ]
      },
-     "execution_count": 1487,
+     "execution_count": 1847,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1488,
+   "execution_count": 1848,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,19 +779,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1489,
+   "execution_count": 1849,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-57 {color: black;}#sk-container-id-57 pre{padding: 0;}#sk-container-id-57 div.sk-toggleable {background-color: white;}#sk-container-id-57 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-57 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-57 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-57 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-57 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-57 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-57 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-57 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-57 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-57 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-57 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-57 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-57 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-57 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-57 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-57 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-57 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-57 div.sk-item {position: relative;z-index: 1;}#sk-container-id-57 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-57 div.sk-item::before, #sk-container-id-57 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-57 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-57 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-57 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-57 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-57 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-57 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-57 div.sk-label-container {text-align: center;}#sk-container-id-57 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-57 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-57\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-57\" type=\"checkbox\" checked><label for=\"sk-estimator-id-57\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-71 {color: black;}#sk-container-id-71 pre{padding: 0;}#sk-container-id-71 div.sk-toggleable {background-color: white;}#sk-container-id-71 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-71 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-71 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-71 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-71 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-71 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-71 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-71 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-71 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-71 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-71 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-71 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-71 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-71 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-71 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-71 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-71 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-71 div.sk-item {position: relative;z-index: 1;}#sk-container-id-71 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-71 div.sk-item::before, #sk-container-id-71 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-71 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-71 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-71 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-71 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-71 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-71 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-71 div.sk-label-container {text-align: center;}#sk-container-id-71 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-71 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-71\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-71\" type=\"checkbox\" checked><label for=\"sk-estimator-id-71\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 1489,
+     "execution_count": 1849,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1490,
+   "execution_count": 1850,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1491,
+   "execution_count": 1851,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1492,
+   "execution_count": 1852,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1493,
+   "execution_count": 1853,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,18 +892,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1494,
+   "execution_count": 1854,
    "metadata": {},
    "outputs": [],
    "source": [
     "# custom logistic regression class\n",
     "class MyLogisticRegression:\n",
     "\n",
-    "    def __init__(self, n_features, lr=0.1, n_iters=1000):\n",
+    "    def __init__(self, n_features, \n",
+    "                        lr=0.1, \n",
+    "                        n_iters=1000, \n",
+    "                        threshold=0,\n",
+    "                        show_loss=False):\n",
     "        self.n_features = n_features\n",
     "        self.lr = lr\n",
     "        self.n_iters = n_iters\n",
     "        self.weights = np.random.randn(n_features+1)\n",
+    "        # Early terminate Gradient Descent if error in the training set becomes less than threshold\n",
+    "        self.threshold = threshold \n",
+    "        self.show_loss = show_loss\n",
     "\n",
     "    def _entropy(self, y):\n",
     "        _, counts = np.unique(y, return_counts=True)\n",
@@ -933,6 +940,10 @@
     "        y_pred = self._sigmoid(X @ self.weights)\n",
     "        cost = -(y * np.log(y_pred) + (1 - y) * np.log(1 - y_pred)) / len(y)\n",
     "        return cost\n",
+    "\n",
+    "    def _mse(self, X, y_true):\n",
+    "        y_pred = self._sigmoid(X @ self.weights)\n",
+    "        return np.mean((y_true - y_pred) ** 2)\n",
     "\n",
     "    def _gradient(self, X, y):\n",
     "        y_pred = self._sigmoid(X @ self.weights)\n",
@@ -968,8 +979,15 @@
     "        X = np.concatenate([X, np.ones((X.shape[0], 1))], axis=1)\n",
     "\n",
     "        # apply gradient descent\n",
-    "        for _ in range(self.n_iters):\n",
+    "        for i in range(self.n_iters):\n",
     "            self.weights -= self.lr * self._gradient(X, y)\n",
+    "            mse = self._mse(X, y)\n",
+    "            if self.show_loss:\n",
+    "                print(f\"epoch {i+1}, loss: {mse}\")\n",
+    "            # early terminate if mse is less than threshold\n",
+    "            if mse < self.threshold:\n",
+    "                break\n",
+    "\n",
     "\n",
     "    def predict(self, X):\n",
     "\n",
@@ -993,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1495,
+   "execution_count": 1855,
    "metadata": {},
    "outputs": [
     {
@@ -1014,18 +1032,15 @@
    "source": [
     "# create the model\n",
     "# model = MyLogisticRegression(n_features=X_train.shape[1])\n",
-    "model = MyLogisticRegression(n_features=13)\n",
+    "model = MyLogisticRegression(n_features=13, show_loss=False, threshold=0)\n",
     "\n",
     "# train the model\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# evaluate the model\n",
-    "predictions = model.predict(X_test)\n"
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1496,
+   "execution_count": 1856,
    "metadata": {},
    "outputs": [
     {
@@ -1047,13 +1062,29 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test, predictions))\n",
-    "print(confusion_matrix(y_test, predictions))"
+    "# evaluate the model\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1497,
+   "execution_count": 1857,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def report(y_true, y_pred):\n",
+    "    print(f\"accuracy: {accuracy(y_true, y_pred):.4f}\")\n",
+    "    print(f\"precision: {precision(y_true, y_pred):.4f}\")\n",
+    "    print(f\"recall: {recall(y_true, y_pred):.4f}\")\n",
+    "    print(f\"f1: {f1(y_true, y_pred):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1858,
    "metadata": {},
    "outputs": [
     {
@@ -1068,12 +1099,28 @@
     }
    ],
    "source": [
-    "# accuracy\n",
-    "print(f\"accuracy: {accuracy(y_test, predictions):.4f}\")\n",
-    "# precision, recall, f1-score, support\n",
-    "print(f\"precision: {precision(y_test, predictions):.4f}\")\n",
-    "print(f\"recall: {recall(y_test, predictions):.4f}\")\n",
-    "print(f\"f1: {f1(y_test, predictions):.4f}\")"
+    "report(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1859,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.7984\n",
+      "precision: 0.6478\n",
+      "recall: 0.5347\n",
+      "f1: 0.5858\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_train)\n",
+    "report(y_train, y_pred)"
    ]
   }
  ],
