--- a/offline3-fnn/fnn-model1.ipynb
+++ b/offline3-fnn/fnn-model1.ipynb
@@ -553,7 +553,7 @@
    "outputs": [],
    "source": [
     "# Dropout\n",
-    "class DropoutLayer:\n",
+    "class DropoutLayer(Layer):\n",
     "    # Init\n",
     "    def __init__(self, dropout_rate=0.3):\n",
     "        # Store rate, we invert it as for example for dropout\n",
