--- a/offline3-fnn/fnn.ipynb
+++ b/offline3-fnn/fnn.ipynb
@@ -27,15 +27,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torchvision in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (0.16.2)\n",
+      "Requirement already satisfied: requests in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torchvision) (2.31.0)\n",
+      "Requirement already satisfied: numpy in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torchvision) (1.26.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torchvision) (10.1.0)\n",
+      "Requirement already satisfied: torch==2.1.2 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torchvision) (2.1.2)\n",
+      "Requirement already satisfied: typing-extensions in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (4.8.0)\n",
+      "Requirement already satisfied: fsspec in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (2023.12.2)\n",
+      "Requirement already satisfied: sympy in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (1.12)\n",
+      "Requirement already satisfied: networkx in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (3.1.3)\n",
+      "Requirement already satisfied: filelock in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from torch==2.1.2->torchvision) (3.13.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from jinja2->torch==2.1.2->torchvision) (2.1.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from requests->torchvision) (2023.11.17)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from requests->torchvision) (2.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from requests->torchvision) (3.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from requests->torchvision) (3.3.2)\n",
+      "Requirement already satisfied: mpmath>=0.19 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from sympy->torch==2.1.2->torchvision) (1.3.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.1; however, version 23.3.2 is available.\n",
+      "You should consider upgrading via the 'g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (4.66.1)\n",
+      "Requirement already satisfied: colorama in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from tqdm) (0.4.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.1; however, version 23.3.2 is available.\n",
+      "You should consider upgrading via the 'g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (3.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (23.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: numpy<2,>=1.21 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (1.26.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: pillow>=8 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (10.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (3.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (6.1.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib) (4.45.1)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib) (3.17.0)\n",
+      "Requirement already satisfied: six>=1.5 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.1; however, version 23.3.2 is available.\n",
+      "You should consider upgrading via the 'g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (1.3.2)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from scikit-learn) (1.11.4)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.17.3 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from scikit-learn) (1.26.2)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from scikit-learn) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from scikit-learn) (3.2.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.1; however, version 23.3.2 is available.\n",
+      "You should consider upgrading via the 'g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: seaborn in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (0.13.1)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from seaborn) (1.26.2)\n",
+      "Requirement already satisfied: pandas>=1.2 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from seaborn) (2.1.4)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from seaborn) (3.8.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.2.0)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.1.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.45.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: pillow>=8 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (23.2)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.17.0)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3.post1)\n",
+      "Requirement already satisfied: six>=1.5 in g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.1.1; however, version 23.3.2 is available.\n",
+      "You should consider upgrading via the 'g:\\level-4-term-2\\cse472-ml-lab\\cse472-ml-sessional\\venv\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
-    "# ! pip install torchvision\n",
-    "# ! pip install tqdm\n",
-    "# ! pip install matplotlib\n",
-    "# ! pip install scikit-learn\n",
-    "# ! pip install seaborn"
+    "! pip install torchvision\n",
+    "! pip install tqdm\n",
+    "! pip install matplotlib\n",
+    "! pip install scikit-learn\n",
+    "! pip install seaborn"
    ]
   },
   {
@@ -1965,7 +2090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
